--- a/react/assets/forus-webshop/scss/_common/sections/products.scss
+++ b/react/assets/forus-webshop/scss/_common/sections/products.scss
@@ -4,9 +4,9 @@
         margin: 0 0 40px;
 
         .section-title {
-            margin: 30px 0 30px;
+            margin: 0 0 30px;
             display: block;
-            font-family: var(--hf);
+            font-family: var(--hf), serif;
         }
 
         .section-filters {
